NIHVIVO-3280: Fixed big gap between Preferred Title and Positions on individual-foaf-people.

--- a/productMods/css/individual/individual-vivo.css
+++ b/productMods/css/individual/individual-vivo.css
@@ -141,7 +141,7 @@ div.overview-value :last-child {
 }
 /* <------ INDIVIDUAL VISUALIZATION */
 #visualization {
-    padding: 0 0 40px 20px;
+    padding: 0 0 0 20px;
     padding-top: 0;
     float: right;
     background-color: #fff;
